= 3.5.0 = * Fixed: wpsc Membership PRO display and edit product issues resolved. * Fixed: Patched an issue where the z-index of the slider went over the Combo admin panel, causing some buttons to be unclickable * Fixed: Misc CSS and HTML formating fixes on the Edit Products - Accessories tab * Fixed: Patched an issue where picture gallery photos were not deleting correctly from Edit Products > Pictures tab. * Updated: Darkened the Users Pages and Checkout Designers so that users can tell that the feature is currently unavailable
git-svn-id: https://plugins.svn.wordpress.org/wpstorecart/trunk@662707 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/wpstorecart/admin/css/superfish.css
+++ b/wpstorecart/admin/css/superfish.css
@@ -39,7 +39,7 @@
 .sf-menu li.sfHover ul {
 	left:			0;
 	top:			2.5em; /* match top ul list item height */
-	z-index:		99;
+	z-index:		9999;
 }
 ul.sf-menu li:hover li ul,
 ul.sf-menu li.sfHover li ul {
@@ -73,7 +73,7 @@ ul.sf-menu li li li.sfHover ul {
         -webkit-box-shadow:#777 1px 1px 4px;     	
 	box-shadow:#777 1px 1px 4px;     
         position:fixed;
-        z-index:99;
+        z-index:9999;
         border-top-left-radius: 0px;
         border-top-right-radius: 0px;         
                 
